################################################################################
#                             nxTools - Change Log                             #
################################################################################

nxTools v1.0.1 (not released):
  CHG: Display requests in ascending order based on their IDs.
  CHG: Removed 'SITE INVITE' command.
  FIX: The nuke tag should be removed on unnuke.
  FIX: Zero-padding the request ID caused Tcl to mistake it for an octal value.

nxTools v1.0.0 (Oct 12, 2005):
  NEW: SITE APPROVE BOT, for IRC approve support.
  NEW: SITE REQBOT, for IRC request support.
  CHG: Removed dZSbot support, only AlcoBot is supported now.
  CHG: Removed pre-time functionality, since duplicated in AlcoBot.
  CHG: Tcl extensions are now bundled in the nxTools package.
  FIX: Convert the list of nuked users into a string when logging them.
  FIX: Corrected the message shown on 'SITE NUKETOP' if there are no users.
  FIX: Updated nxHelper to v2.2.1, which fixes a bug in the extension loader.
  FIX: User ownership is now properly set on request tags.

nxTools v0.9.13 (Sep 10, 2005):
  NEW: Moved to the modified BSD license.
  CHG: Removed bot specific output for SITE commands.
  CHG: Removed unused configuration options.
  FIX: Admins could not delete requests by other users.

nxTools v0.9.12 (Aug 29, 2005):
  NEW: Option to force requests to be proper release names (e.g. release.name-group).
  CHG: MP3 pre's are logged as PRE-MP3 instead of just PRE (needed for the sitebot).
  FIX: Forgot to remove the invite options from nxTools.cfg.
  FIX: The credits logged for SITE GIVE/TAKE should be in kilobytes when dZSbot support is disabled.

nxTools v0.9.11 (Aug 11, 2005):
  NEW: Added ::nx::sleep <ms> to nxHelper, to suspend execution for the given time.
  NEW: Request limits for individual users and groups.
  NEW: Rewrote argument parser, supports quoting arguments (e.g. SITE PRE freeware "Some Thing").