@@ -5,6 +5,7 @@
 nxTools v1.0.1 (not released):
   CHG: Display requests in ascending order based on their IDs.
   CHG: Removed 'SITE INVITE' command.
+  CHG: Removed an unneeded ORDER clause from the dupe database cleaner.
   FIX: The nuke tag should be removed on unnuke.
   FIX: Zero-padding the request ID caused Tcl to mistake it for an octal value.
 
